welcome.lessons.welcome.array.array123.Array123.scala.error
array123:9: error: type mismatch;
 found   : Unit
 required: Boolean
		nums(indexOfValue(nums,2))=0
                                          ^